apps/job-liquibase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migrations
