apps/general.yaml
# SSL Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "toway.xyz"
        - "stage.toway.xyz"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "toway.xyz"
        - "stage.toway.xyz"
      tls:
        mode: SIMPLE
        credentialName: toway-xyz-tls-secret

---
apiVersion: v1
kind: Namespace
metadata:
  name: migrations
