apps/argocd-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - argocd.toway.xyz
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
