apps/kiali.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: argocd
spec:
  hosts:
    - kiali.toway.xyz
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
